
===========================================================================
                              Release History
===========================================================================

6.5.3 to 6.6 (??? ??, 202?)

  * Added PlusROMs support for saving high scores

  * Added preliminary support for 'MVC' bankswitching scheme by
    Rob Bairos.

  * Added web links for many games

  * Debugger: enhanced prompt's auto complete and history

  * Debugger: added optional logging of breaks and traps

  * Debugger: added Thumb cycle counting

-Have fun!


6.5.2 to 6.5.3 (April 20, 2021)

  * Added context-sensitive help.

  * Improved support of multiple monitors with different resolutions.

  * Improved analog input reading (Paddles, Keyboards...).

  * Fixed QuadTari support for controller types other than Joysticks.

  * Fixed palette and TV effects saving for Retron77.

  * Fixed immediate disassembling when switching options in debugger.


6.5.1 to 6.5.2 (February 25, 2021)

  * Fixed broken Driving Controller support for Stelladaptor/2600-daptor
    devices.

  * Fixed missing QuadTari option in UI.

  * Improved QuadTari timing.

  * Added CPU usage stats to ARM cart classes debug widgets.


6.5 to 6.5.1 (January 24, 2021)

  * Fixed paddle button bug for jittering controllers.

  * Improved switching between joysticks and paddles on Retron77 port.

  * Improved memory usage on Retron77 port.


6.4 to 6.5 (January 9, 2021)

  * Added high scores saving.

  * Improved text editing functionality (except PromptWidget):
    - Enhanced selection and cut/copy/paste from keyboard.
    - Added undo and redo support.
    - Added mouse support (selection, cut/copy/paste).
    - All actions have keyboard shortcuts.

  * Various improvements to the ROM launcher:
    - Added wildcard support to the dialog filter
    - Added option to search subdirectories

  * Added static tooltips to some UI items.

  * Added dynamic tooltips to most debugger items.
